# toga

./: LESSONS.md  pyproject.toml
android/src/toga_android/: fonts.py
android/tests_backend/: fonts.py
changes/: 2159.doc.md  2841.feature.md  4307.feature.md
cocoa/src/toga_cocoa/: fonts.py
cocoa/tests_backend/: fonts.py
core/: pyproject.toml
core/src/toga/: fonts.py
core/src/toga/style/: layout.py  pack.py
core/tests/: test_fonts.py
core/tests/style/pack/: test_font.py
docs/en/reference/api/resources/: font.md
dummy/src/toga_dummy/: fonts.py
examples/font/font/: app.py
gtk/src/toga_gtk/: fonts.py
gtk/tests_backend/: fonts.py
iOS/src/toga_iOS/: app.py  fonts.py
iOS/src/toga_iOS/libs/: core_text.py  uikit.py
iOS/tests_backend/: fonts.py
qt/src/toga_qt/: fonts.py
qt/tests_backend/: fonts.py
testbed/tests/: test_fonts.py
textual/src/toga_textual/: fonts.py
travertino/src/travertino/: constants.py  fonts.py
travertino/tests/: test_fonts.py
web/src/toga_web/: app.py  fonts.py
winforms/src/toga_winforms/: app.py  fonts.py
winforms/src/toga_winforms/widgets/: canvas.py
winforms/tests_backend/: app.py  fonts.py
winui3/: CLAUDE.md  TODO.md  pyproject.toml  ty.toml
winui3/.claude/: settings.json
winui3/src/toga_winui3/: app.py  colors.py  command.py  container.py  dialogs.py  factory.py  fonts.py  icons.py  images.py  keys.py  paths.py  screens.py  statusicons.py  window.py
winui3/src/toga_winui3/libs/: proactor.py  screenshot.py
winui3/src/toga_winui3/widgets/: _utils.py  activityindicator.py  base.py  box.py  button.py  canvas.py  dateinput.py  detailedlist.py  divider.py  imageview.py  label.py  mapview.py  multilinetextinput.py  numberinput.py  optioncontainer.py  passwordinput.py  progressbar.py  scrollcontainer.py  selection.py  slider.py  splitcontainer.py  switch.py  table.py  textinput.py  timeinput.py  tree.py  webview.py
winui3/stubs/win32more/: __init__.pyi
winui3/stubs/win32more/Microsoft/Graphics/Canvas/: __init__.pyi
winui3/stubs/win32more/Microsoft/Graphics/Canvas/Brushes/: __init__.pyi
winui3/stubs/win32more/Microsoft/Graphics/Canvas/Geometry/: __init__.pyi
winui3/stubs/win32more/Microsoft/Graphics/Canvas/Text/: __init__.pyi
winui3/stubs/win32more/Microsoft/Graphics/Canvas/UI/: __init__.pyi
winui3/stubs/win32more/Microsoft/Graphics/Canvas/UI/Xaml/: __init__.pyi
winui3/stubs/win32more/Microsoft/UI/: __init__.pyi
winui3/stubs/win32more/Microsoft/UI/Input/: __init__.pyi
winui3/stubs/win32more/Microsoft/UI/Text/: __init__.pyi
winui3/stubs/win32more/Microsoft/UI/Windowing/: __init__.pyi
winui3/stubs/win32more/Microsoft/UI/Xaml/: __init__.pyi
winui3/stubs/win32more/Microsoft/UI/Xaml/Controls/: __init__.pyi
winui3/stubs/win32more/Microsoft/UI/Xaml/Controls/Primitives/: __init__.pyi
winui3/stubs/win32more/Microsoft/UI/Xaml/Input/: __init__.pyi
winui3/stubs/win32more/Microsoft/UI/Xaml/Media/: __init__.pyi
winui3/stubs/win32more/Microsoft/UI/Xaml/Media/Animation/: __init__.pyi
winui3/stubs/win32more/Microsoft/UI/Xaml/Media/Imaging/: __init__.pyi
winui3/stubs/win32more/Windows/Foundation/: __init__.pyi
winui3/stubs/win32more/Windows/Foundation/Collections/: __init__.pyi
winui3/stubs/win32more/Windows/Foundation/Numerics/: __init__.pyi
winui3/stubs/win32more/Windows/Storage/Streams/: __init__.pyi
winui3/stubs/win32more/Windows/System/: __init__.pyi
winui3/stubs/win32more/Windows/UI/: __init__.pyi
winui3/stubs/win32more/Windows/UI/Text/: __init__.pyi
winui3/stubs/win32more/Windows/Win32/UI/WindowsAndMessaging/: __init__.pyi
winui3/stubs/win32more/winui3/: __init__.pyi
winui3/tests_backend/: __init__.py  app.py  dialogs.py  fonts.py  icons.py  images.py  probe.py  screens.py  window.py
winui3/tests_backend/widgets/: activityindicator.py  base.py  box.py  button.py  canvas.py  dateinput.py  detailedlist.py  divider.py  imageview.py  label.py  mapview.py  multilinetextinput.py  numberinput.py  optioncontainer.py  passwordinput.py  progressbar.py  properties.py  scrollcontainer.py  selection.py  slider.py  splitcontainer.py  switch.py  table.py  textinput.py  timeinput.py  tree.py  webview.py
winui3/tools/: generate_win32more_stubs.py
